// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinning  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="sc-gsTCUz eMeMyw"
      color="dark-1"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <div
        class="sc-gsTCUz eMeMyw"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-pFZIQ eMHquB"
        color="dark-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-bdfBwQ lkrCgK"
        color="dark-1"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-dlfnbm bZUHmG"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-hKgILt dktdwW"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-eCssSg dEAMGT"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-jSgupP HqkGp"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-gKsewC fiGtJh"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-iBPRYJ FFLRq"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-fubCfw bIEgek"
        color="dark-1"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <div
        class="sc-gsTCUz euwxfG"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-pFZIQ cNATf"
        color="accent-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-bdfBwQ dfsdXQ"
        color="accent-2"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-dlfnbm eROfXP"
        color="accent-3"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-hKgILt eZaKgO"
        color="neutral-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-eCssSg kVlREv"
        color="red"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-jSgupP dteJaI"
        color="blue"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-gKsewC fiGtJh"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-iBPRYJ FFLRq"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-fubCfw bIEgek"
        color="dark-1"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dYebPD"
    >
      <div
        class="sc-gsTCUz fUSQXG"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-pFZIQ hjkmsH"
        color="accent-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-gsTCUz euwxfG"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-bdfBwQ kgba-dO"
        color="accent-2"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kDNLiy"
      />
      <div
        class="sc-dlfnbm gNvLtb"
        color="accent-3"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
